syntax = "proto3";

package malonaz.codegen.gateway.v1;

import "google/protobuf/descriptor.proto";
import "google/protobuf/field_mask.proto";

option go_package = "github.com/malonaz/core/genproto/codegen/gateway/v1";

// Extension for service-level gateway configuration options.
// Allows customizing how a gRPC service is exposed through the gateway.
extend google.protobuf.ServiceOptions {
  // Opts for a service.
  ServiceOpts service_opts = 112211;
}

// Extension for method-level gateway configuration options.
// Allows customizing how individual RPC methods are handled by the gateway.
extend google.protobuf.MethodOptions {
  // Opts for a handler.
  HandlerOpts opts = 22942;
}

// ServiceOpts defines gateway-specific options for an entire gRPC service.
// Currently empty but can be extended with service-wide gateway configurations
// such as authentication requirements, rate limiting, or routing rules.
message ServiceOpts {}

// HandlerOpts defines gateway-specific options for individual RPC methods.
// Controls how the gateway generates and handles the method implementation.
message HandlerOpts {
  // Proxy can be set to a fully qualified method name to indicate that this method simply forwards the request to
  // a backend grpc endpoint. When set, the code generator generates the pass through handler.
  // When unset, the code generator will skip generating the default pass-through
  // handler for this method, expecting the developer to provide a custom
  // implementation. This is useful for methods that require special logic,
  // transformation, aggregation, or integration with multiple backend services.
  string proxy = 1;
  // A field mask to be applied on response objects.
  google.protobuf.FieldMask field_mask = 2;
}
