syntax = "proto3";

package malonaz.core.codegen.aip.v1;

import "buf/validate/validate.proto";
import "google/protobuf/descriptor.proto";

option go_package = "github.com/malonaz/core/genproto/codegen/aip/v1";

// Extension for method options to mark methods as standard AIP methods (Create, Get, Update, Delete, List).
extend google.protobuf.MethodOptions {
  // Extension for standard method.
  StandardMethod standard_method = 93000;
}

// Extensions for message options to configure AIP list and update behaviors.
extend google.protobuf.MessageOptions {
  //  The uuid namespace for a resource.
  string uuid_namespace = 92000;

  // Configuration for AIP Update RPCs, including field mask handling and authorization.
  UpdateOptions update = 920013;

  // Option for pagination.
  PaginationOptions pagination = 94000;
  // Option for ordering.
  OrderingOptions ordering = 94001;
  // Option for ordering.
  FilteringOptions filtering = 94002;
}

// Options for filtering.
message FilteringOptions {
  // List of fields that can be used in the filter expression.
  // Can use * or some.path.* wildcards.
  repeated string paths = 1;
}

// Options for pagination.
message PaginationOptions {
  // The default number of items to return per page.
  uint32 default_page_size = 1 [(buf.validate.field).uint32.gt = 0];
}

// Options for ordering.
message OrderingOptions {
  option (buf.validate.message).cel = {
    id: "ordering_options.default_in_fields"
    message: "default ordering field must be present in the fields list"
    expression: "this.fields.exists(f, f + ' asc' == this.default || f + ' desc' == this.default)"
  };

  // List of field names that can be used in the order_by parameter.
  // Only fields listed here are allowed for sorting to prevent SQL injection
  // and ensure queries can be efficiently executed.
  repeated string fields = 1 [(buf.validate.field).repeated.items.string = {pattern: "^[a-z][a-z0-9_]*$"}];
  // The default ordering by option.
  string default = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.pattern = "^[a-z][a-z0-9_]*\\s+(asc|desc)$"
  ];
}

// Configuration options for AIP-compliant Update methods.
// Defines which fields can be updated and how field masks are processed.
message UpdateOptions {
  // Fields that are automatically included in every update, even if not in the field mask.
  // Commonly includes fields like "update_time" that should always be refreshed.
  // These paths are added to the update operation without requiring explicit authorization.
  repeated string default_paths = 1;

  // List of field paths that users are authorized to update.
  // Only fields listed here (or matching wildcard patterns) can be modified via Update RPCs.
  // This provides fine-grained access control at the field level.
  repeated AuthorizedUpdatePath authorized_paths = 2;

  // Mappings from proto field paths to database column names or JSONB paths.
  // Allows decoupling the proto field structure from the database schema.
  // Supports wildcards (e.g., "metadata.*" => "metadata_jsonb") for nested fields.
  repeated UpdatePathMapping path_mappings = 3;
}

// Represents a single authorized field path for updates.
// Used within UpdateOptions to define which fields can be modified.
message AuthorizedUpdatePath {
  // The field path that can be updated (e.g., "name", "metadata.description").
  // Supports wildcards with ".*" suffix to authorize all nested fields
  // (e.g., "metadata.*" authorizes "metadata.name", "metadata.description", etc.).
  string path = 1;
}

// Defines how a proto field path maps to database column(s).
// This allows complex mappings where a single proto field may update multiple DB columns,
// or multiple proto fields map to a single JSONB column.
message UpdatePathMapping {
  // The source field path from the proto field mask.
  // Supports wildcards with ".*" suffix to match all nested fields
  // (e.g., "metadata.*" matches "metadata.name", "metadata.tags", etc.).
  string from = 1;

  // The target database column name(s) to update.
  // Multiple columns can be specified if one proto field affects multiple DB columns.
  // Example: ["metadata_jsonb"] for JSONB columns, or ["field1", "field2"] for multiple columns.
  repeated string to = 2;
}

// Marks a method as a standard AIP method (Create, Get, Update, Delete, or List).
// The protoc-templates plugin uses this to generate appropriate server and client code.
message StandardMethod {
  // The resource type this method operates on (e.g., "example.com/User").
  // Must match a resource type defined in google.api.resource annotations.
  // Used to determine request/response message types and validate method naming.
  string resource = 1;
  // Emit an event for this action, using github.com/malonaz/pgq.
  // Only supported on CREATE, UPDATE & DELETE methods.
  bool emit_event = 2;
}
